--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,18 +1,106 @@
 <footer class="footer">
-  <div class="container">
-    footer
-    <div>
-      <i class="icon-facebook"></i>
-      <i class="icon-instagram"></i>
-      <i class="icon-phone"></i>
-      <i class="icon-skype"></i>
-      <i class="icon-whatsapp"></i>
-      <svg class="svg-email" aria-label="email">
-        <use xlink:href="./assets/images/sprite.svg#icon-email"></use>
-      </svg>
-      <svg class="svg-logo" aria-label="logo">
-        <use xlink:href="./assets/images/sprite.svg#icon-logo-dent"></use>
-      </svg>
+  <div class="container footer__container">
+    <div class="footer__logo">
+      <a href="#">
+        <svg class="footer__svg-logo" aria-label="logo">
+          <use xlink:href="./assets/images/sprite.svg#icon-logo-dent"></use>
+        </svg>
+      </a>
+    </div>
+    <div class="footer__block">
+      <nav class="footer-navigation">
+        <h2 class="footer-title">Navigation</h2>
+        <ul>
+          <li class="footer-navigation__item">
+            <a class="footer-navigation__link" href="#">Home</a>
+          </li>
+          <li class="footer-navigation__item">
+            <a class="footer-navigation__link" href="#about-us">About us</a>
+          </li>
+          <li class="footer-navigation__item">
+            <a class="footer-navigation__link" href="#services">Our services</a>
+          </li>
+          <li class="footer-navigation__item">
+            <a class="footer-navigation__link" href="#team">Our Team</a>
+          </li>
+          <li class="footer-navigation__item">
+            <a class="footer-navigation__link" href="#reviews">Reviews</a>
+          </li>
+          <li class="footer-navigation__item">
+            <a class="footer-navigation__link" href="#contacts">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="footer-social">
+        <h2 class="footer-social__title footer-title">Social media</h2>
+        <ul class="footer-social__list">
+          <li class="footer-social__item">
+            <button
+              type="button"
+              class="footer-social__button"
+              aria-label="The project is still in work"
+            >
+              <i class="icon-instagram"></i>
+            </button>
+          </li>
+          <li class="footer-social__item">
+            <button
+              type="button"
+              class="footer-social__button"
+              aria-label="The project is still in work"
+            >
+              <i class="icon-skype"></i>
+            </button>
+          </li>
+          <li class="footer-social__item">
+            <button
+              type="button"
+              class="footer-social__button"
+              aria-label="The project is still in work"
+            >
+              <i class="icon-facebook"></i>
+            </button>
+          </li>
+          <li class="footer-social__item">
+            <button
+              type="button"
+              class="footer-social__button"
+              aria-label="The project is still in work"
+            >
+              <i class="icon-whatsapp"></i>
+            </button>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__block-email">
+        <div class="footer-subscribe">
+          <h2 class="footer-title">Subscribe To Newsletter</h2>
+          <span class="footer-subscribe__text"
+            >Enter your email address for receiving valuable newsletters.</span
+          >
+          <form id="email-form" action="#">
+            <div class="footer__form-group">
+              <input
+                type="text"
+                id="email-input"
+                name="email"
+                class="footer__form-input"
+                placeholder="Enter your email address"
+              />
+              <button type="submit" class="footer-btn" aria-label="Submit button">
+                <svg class="footer__svg-email" aria-label="email">
+                  <use xlink:href="./assets/images/sprite.svg#icon-email"></use>
+                </svg>
+              </button>
+            </div>
+            <div id="error-message" class="footer__form-error"></div>
+          </form>
+        </div>
+        <div class="footer__block-copy">
+          <span class="footer-copy__span">Created by SoftRyzen</span>
+        </div>
+      </div>
     </div>
   </div>
+  {% include 'components/popup-modal.html' %} {% include 'components/popup-social.html' %}
 </footer>
