--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,6 +15,8 @@
 @import './components/mobile-menu';
 @import './components/nav-menu';
 @import './components/modal';
+@import './components/popup-modal';
+@import './components/popup-social';
 
 @import './layouts/header';
 
