--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -15,6 +15,7 @@
 @import './components/mobile-menu';
 @import './components/nav-menu';
 @import './components/modal';
+@import './components/slick-dots';
 
 @import './layouts/header';
 
