--- a/src/html/partials/sections/our_team.html
+++ b/src/html/partials/sections/our_team.html
@@ -2,12 +2,12 @@
   <div class="container our-team__container">
     <span class="our-team__undertitle">Our Team</span>
     <h2 class="our-team__title">Our Awesome Team</h2>
-    <button class="our-team__next" aria-label="next slide">
+    <button class="our-team__next slider__btn" aria-label="next slide">
       <svg class="our-team__next-icon" class width="16" height="16">
         <use href="./assets/images/sprite.svg#icon-arrow-right"></use>
       </svg>
     </button>
-    <button class="our-team__prev" aria-label="previous slide">
+    <button class="our-team__prev slider__btn" aria-label="previous slide">
       <svg class="our-team__next-icon" class width="16" height="16">
         <use href="./assets/images/sprite.svg#icon-arrow-left"></use>
       </svg>
