--- a/src/html/partials/sections/about_us.html
+++ b/src/html/partials/sections/about_us.html
@@ -4,7 +4,7 @@
       <span class="block-about__before-title">Why Choose Us</span>
       <h2 class="block-about__title">About Us</h2>
       <p class="block-about__text">
-        The dental clinic "named" has a huge experience and high-quality equipment. The qualified
+        The dental clinic Smile Dent has a huge experience and high-quality equipment. The qualified
         selection of our team and technical equipment provides a wide range of services from
         treatment to the most complex dental operations, as well as implantations.
       </p>
