--- a/src/html/partials/sections/our_service.html
+++ b/src/html/partials/sections/our_service.html
@@ -1,49 +1,116 @@
 <section class="our-service" id="services">
   <div class="container">
-    Our service
-    <div>
-      <img
-        class="header-logo"
-        src="./assets/images/svg/braces-rubber-bands.svg"
-        alt="braces-rubber-bands"
-        width="80"
-        height="80"
-      />
-      <img
-        class="header-logo"
-        src="./assets/images/svg/cavity.svg"
-        alt="cavity"
-        width="80"
-        height="80"
-      />
-      <img
-        class="header-logo"
-        src="./assets/images/svg/forceps.svg"
-        alt="forceps"
-        width="80"
-        height="80"
-      />
-      <img
-        class="header-logo"
-        src="./assets/images/svg/implant.svg"
-        alt="implant"
-        width="80"
-        height="80"
-      />
-      <img
-        class="header-logo"
-        src="./assets/images/svg/tooth.svg"
-        alt="tooth"
-        width="80"
-        height="80"
-      />
-      <img
-        class="header-logo"
-        src="./assets/images/svg/tooth-loosen.svg"
-        alt="tooth"
-        width="80"
-        height="80"
-      />
+    <span class="our-service__before-title">our service</span>
+    <h2 class="our-service__title">Our List Of Services</h2>
+    <div class="our-service__slider">
+      <div class="our-service__img-wrapper">
+        <div class="our-service__block-card block-card">
+          <img
+            class="our-service__img"
+            src="./assets/images/svg/tooth.svg"
+            alt="tooth"
+            width="80"
+            height="80"
+          />
+          <span class="block-card__title">Dental treatment</span>
+          <span class="block-card__subtitle"
+            >Painless and comfortable treatment using computer anesthesia, modern technologies and
+            highly aesthetic materials. Possible treatment in sedation (medicated sleep).</span
+          >
+        </div>
+      </div>
+      <div class="our-service__img-wrapper">
+        <div class="our-service__block-card block-card">
+          <img
+            class="our-service__img"
+            src="./assets/images/svg/forceps.svg"
+            alt="forceps"
+            width="80"
+            height="80"
+            loading="lazy"
+          />
+          <span class="block-card__title">Dentistry Surgery</span>
+          <span class="block-card__subtitle"
+            >Using gentle, high-tech techniques and the best equipment for optimal results. Painless
+            surgical procedures of any complexity. Maximum comfort for the patient during
+            treatment.</span
+          >
+        </div>
+      </div>
+      <div class="our-service__img-wrapper">
+        <div class="our-service__block-card block-card">
+          <img
+            class="our-service__img"
+            src="./assets/images/svg/implant.svg"
+            alt="implant"
+            width="80"
+            height="80"
+            loading="lazy"
+          />
+
+          <span class="block-card__title">Dentistry Prosthetics</span>
+          <span class="block-card__subtitle"
+            >Complete restoration of the chewing function and aesthetics of the patient's smile,
+            regardless of his age, in any clinical situation. High-quality replacement of extracted
+            or lost teeth.</span
+          >
+        </div>
+      </div>
+      <div class="our-service__img-wrapper">
+        <div class="our-service__block-card block-card">
+          <img
+            class="our-service__img"
+            src="./assets/images/svg/braces-rubber-bands.svg"
+            alt="braces-rubber-bands"
+            width="80"
+            height="80"
+            loading="lazy"
+          />
+
+          <span class="block-card__title">Orthodontics</span>
+          <span class="block-card__subtitle"
+            >Correction of bite, alignment of teeth at any age. Modern leveling systems manufactured
+            in Germany and America, the use of virtual planning and 3D modeling.</span
+          >
+        </div>
+      </div>
+      <div class="our-service__img-wrapper">
+        <div class="our-service__block-card block-card">
+          <img
+            class="our-service__img"
+            src="./assets/images/svg/cavity.svg"
+            alt="cavity"
+            width="80"
+            height="80"
+            loading="lazy"
+          />
+          <span class="block-card__title">Children's Dentistry</span>
+          <span class="block-card__subtitle"
+            >Experienced professionals who easily find an approach to children. Treatment using
+            computer anesthesia and sedation. Toys, coloring books and cartoons for a comfortable
+            stay of your baby at the reception.</span
+          >
+        </div>
+      </div>
+      <div class="our-service__img-wrapper">
+        <div>
+          <img
+            class="our-service__img"
+            src="./assets/images/svg/tooth-loosen.svg"
+            alt="tooth"
+            width="80"
+            height="80"
+            loading="lazy"
+          />
+          <span class="block-card__title">Periodontal Center</span>
+          <span class="block-card__subtitle"
+            >Application of a professional technique for evaluating periodontal tissues using a PSR
+            screening card. Medical treatment and sterilization of periodontal pockets with a
+            laser.</span
+          >
+        </div>
+      </div>
     </div>
+    <button class="btn our-service__btn">Book now</button>
   </div>
 </section>
